force-app/main/default/objects/Interface__c/Interface__c.object-meta.xml
<CustomObject>
    <description>Interface 관리</description>
    <label>Interface</label>
    <nameField>
        <label>Interface Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>