force-app/main/default/objects/Interface__c/fields/Certificate__c.field-meta.xml
<CustomField>
    <fullName>Certificate__c</fullName>
    <description>Certificate for Callout</description>
    <inlineHelpText>인증서가 필요한 경우, 인증서 이름 기입</inlineHelpText>
    <label>Certificate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>