force-app/main/default/objects/Interface__c/fields/EmailReceiver10__c.field-meta.xml
<CustomField>
    <fullName>EmailReceiver10__c</fullName>
    <label>EmailReceiver10</label>
    <type>Email</type>
</CustomField>