force-app/main/default/objects/Interface__c/fields/EmailReceiver1__c.field-meta.xml
<CustomField>
    <fullName>EmailReceiver1__c</fullName>
    <label>EmailReceiver1</label>
    <type>Email</type>
</CustomField>