force-app/main/default/objects/Interface__c/fields/EmailReceiver2__c.field-meta.xml
<CustomField>
    <fullName>EmailReceiver2__c</fullName>
    <label>EmailReceiver2</label>
    <type>Email</type>
</CustomField>