force-app/main/default/objects/Interface__c/fields/fm_ReceiverList__c.field-meta.xml
<CustomField>
    <fullName>fm_ReceiverList__c</fullName>
    <formula>IF(ISBLANK(EmailReceiver1__c), &apos;&apos;, EmailReceiver1__c + &apos;;&apos;)
+ IF(ISBLANK(EmailReceiver2__c), &apos;&apos;, EmailReceiver2__c + &apos;;&apos;)
+ IF(ISBLANK(EmailReceiver3__c), &apos;&apos;, EmailReceiver3__c + &apos;;&apos;)
+ IF(ISBLANK(EmailReceiver4__c), &apos;&apos;, EmailReceiver4__c + &apos;;&apos;)
+ IF(ISBLANK(EmailReceiver5__c), &apos;&apos;, EmailReceiver5__c + &apos;;&apos;)
+ IF(ISBLANK(EmailReceiver6__c), &apos;&apos;, EmailReceiver6__c + &apos;;&apos;)
+ IF(ISBLANK(EmailReceiver7__c), &apos;&apos;, EmailReceiver7__c + &apos;;&apos;)
+ IF(ISBLANK(EmailReceiver8__c), &apos;&apos;, EmailReceiver8__c + &apos;;&apos;)
+ IF(ISBLANK(EmailReceiver9__c), &apos;&apos;, EmailReceiver9__c + &apos;;&apos;)
+ IF(ISBLANK(EmailReceiver10__c), &apos;&apos;, EmailReceiver10__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fm_ReceiverList</label>
    <type>Text</type>
</CustomField>