force-app/main/default/objects/Interface__c/fields/InterfaceId__c.field-meta.xml
<CustomField>
    <fullName>InterfaceId__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Interface 정보 마이그레이션을 위한 인터페이스 Key</inlineHelpText>
    <label>InterfaceId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>