force-app/main/default/objects/Interface__c/fields/Protocol__c.field-meta.xml
<CustomField>
    <fullName>Protocol__c</fullName>
    <label>Protocol</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HTTPS</fullName>
                <default>true</default>
                <label>HTTPS</label>
            </value>
            <value>
                <fullName>HTTP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>