force-app/main/default/objects/Interface__c/fields/SuccessfulStatusCode__c.field-meta.xml
<CustomField>
    <fullName>SuccessfulStatusCode__c</fullName>
    <label>SuccessfulStatusCode</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SuccessfulStatusCode</valueSetName>
    </valueSet>
</CustomField>