force-app/main/default/objects/Interface__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <inlineHelpText>HTTP인 경우 기입</inlineHelpText>
    <label>URL</label>
    <type>Url</type>
</CustomField>